[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "poly-trading-engine"
version = "3.0.0"
description = "Production-grade BTC paper trading engine with live Binance price feed"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "ws_server:app"

[tool.railway]
entrypoint = "ws_server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
